# PPA_labs

./: .gitignore  README.md  pyproject.toml
lr1/lez_llm_answers/deepseek/: deepseek_annotation.md  deepseek_q1.md  deepseek_q2.md  deepseek_q3.md  deepseek_q4.md  deepseek_q5.md  literature_list.md
lr1/lez_llm_answers/gigachat/: gigachat_annotation.md  gigachat_q1.md  gigachat_q2.md  gigachat_q3.md  gigachat_q4.md  gigachat_q5.md  literature_list.md
lr1/lez_llm_answers/gpt4o/: gpt4o_annotation.md  gpt4o_q1.md  gpt4o_q2.md  gpt4o_q3.md  gpt4o_q4.md  gpt4o_q5.md  literature_list.md
lr1/lez_llm_answers/yandex/: literature_list.md  ya_annotatiom.md  yandex_q1.md  yandex_q2.md  yandex_q3.md  yandex_q4.md  yandex_q5.md
task1/: app.py  task.ipynb
task2/: task.ipynb
task3/: app.py  task.ipynb
task4/: task.ipynb
task6/: 6lr.ipynb
